# blog-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md
migrations/2025-03-15-165734_create_posts/: up.sql
migrations/2025-03-16-045128_create_users/: up.sql
migrations/2025-03-16-045138_create_categories/: up.sql
migrations/2025-03-16-045153_create_post_categories/: down.sql  up.sql
migrations/2025-03-16-045247_create_comments/: up.sql
migrations/2025-03-16-054144_add_role_to_users/: up.sql
src/: main.rs
src/api/: mod.rs
src/api/controllers/: auth_controller.rs  category_controller.rs  comment_controller.rs  mod.rs  post_controller.rs  user_controller.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
src/config/: database.rs  mod.rs
src/db/: mod.rs
src/db/schema/: mod.rs
src/models/: mod.rs
src/models/dto/: category_dto.rs  comment_dto.rs  mod.rs  post_dto.rs  user_dto.rs
src/models/entities/: category.rs  comment.rs  mod.rs  post.rs  post_category.rs  user.rs
src/repositories/: mod.rs  post_repository.rs
src/services/: category_service.rs  comment_service.rs  mod.rs  post_service.rs  user_service.rs
src/utils/: error.rs  mod.rs  slug.rs  validation.rs
